# Library-EXIFTags

./: .gitignore  .gitmodules  BuildLibExif.cmake  CMakeLists.txt  Dependencies.cmake  GoogleTest.txt.in  ProjectFiles.cmake  PyBind11-Setup.cmake  PyBind11.txt.in  README.md  build_release.sh  build_release_conan.sh  clang-tidy.txt  conanfile.py  conanfile.txt
exif_2g_tools/: PSONNAV_parser.py  print_tags.py  process_directory_nav.py
include/EXIFTags/: ImageHandler.h  Tag.h  TagConstants.h  Tags.h
include/cxxopts/: cxxopts.hpp
lib/: 64_bit_support.patch  _stdint.h  config.h  tiff_support.patch
rust_exif_2g/: Cargo.toml
rust_exif_2g/src/: lib.rs
scripts/: process_directory_depth.py  process_directory_nav.py
src/: ExifTagsPython.cpp  ImageHandler.cpp  Tag.cpp  TagConstants.cpp  Tags.cpp  main.cpp
test_data/: opencv_test.tif
tests/: TestConstants.h.i  TestImageHandler.cpp  TestTag.cpp  TestTagConstants.cpp  TestTags.cpp
